# will-of-the-prophets

./: .coveragerc  .dictionary  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .pylintrc  .travis.yml  LICENSE  Makefile  Pipfile  Procfile  README.markdown  app.json  cypress.config.js  cypress.env.json  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rcfile.txt  requirements.in  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: django.yaml  full-stack.yaml  js.yaml  json.yaml  pre-commit-autoupdate.yaml  pre-commit.yaml  python.yaml  scss.yaml  securityheaders.com.yaml  yaml.yaml
cypress/e2e/: roll.cy.js
cypress/integration/: roll.spec.js
cypress/support/: e2e.js
will_of_the_prophets/: admin.py  apps.py  board.py  context_processors.py  forms.py  models.py  settings.py  test_runner.py  urls.py  validators.py  views.py  wsgi.py
will_of_the_prophets/fixtures/: buttholes.json  full-stack.json  live.json  rolls.json  special-square-types.json  special-squares.json  special_squares.json
will_of_the_prophets/management/commands/: simulaterolls.py
will_of_the_prophets/migrations/: 0001_initial.py  0002_roll_timestamped.py  0003_s3direct.py  0004_specialsquaretype_auto_move.py  0005_roll_remove_default.py  0005_timeframe_specialsquares_and_buttholes.py  0005_weighted_rolls.py  0006_remove_default_roll.py
will_of_the_prophets/settings/: __init__.py  test.py
will_of_the_prophets/static/: humans.txt
will_of_the_prophets/templates/: _lcars_filler.html  base.html
will_of_the_prophets/tests/: conftest.py  factories.py  test_authorisation.py  test_authorization.py  test_board.py  test_buttholes.py  test_calculate_position.py  test_canonical_link.py  test_forms.py  test_last_modified.py  test_rolls.py  test_special_squares.py  test_square.py  test_static_assets.py
(+32 files in other folders)
